# Eaquel_Dumper

./: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  module.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  build.yml.bak  ci.yml
Base/: Eaquel_Config.json  module.prop
Base/webroot/: index.html
Base/webroot/assets/: Dumper.js  Language.js  Style.css
Base/webroot/langs/: ar.xml  de.xml  en.xml  es.xml  fr.xml  ja.xml  pt.xml  ru.xml  tr.xml  zh.xml
Dumper/: build.gradle.kts
Dumper/Source/Main/: AndroidManifest.xml
Dumper/Source/Main/Native/: CMakeLists.txt  Core.h  Core.hpp  Dumper.cpp  Hack.cpp  Hack.h  Main.cpp  ReZygisk.hpp  Zygisk.hpp
Gradle/: libs.versions.toml
